# Argus

./: .gitignore  .hermes.md  CHANGELOG.md  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
.hermes/plans/: argus-v0.2.0.md
argus/: __init__.py  __main__.py  config.py  dashboard.py  mcp_server.py  plugin_registry.py
argus/senses/: __init__.py  audio.py  base.py  screen.py  serial_coprocessor.py  system.py  usb_environmental.py  usb_gps.py  usb_thermal.py  webcam.py
argus/static/: app.js  index.html  style.css
docs/: API.md  MCP.md  PLUGINS.md
hermes-argus-plugin/: plugin.yaml
hermes-argus-plugin/dashboard/: manifest.json  plugin_api.py
hermes-argus-plugin/hermes_argus/: __init__.py  api.py
tests/: test_audio.py  test_base.py  test_registry.py  test_screen.py  test_system.py  test_webcam.py
